<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <!-- Send Money layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/transfer_send_money"
            android:layout_height="wrap_content">
    
            <Spinner
                android:id="@+id/transfer_money_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_send_money"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    
            <EditText
                android:id="@+id/transfer_money_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/transfer_money_title"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/transfer_money_title"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/transfer_amt"
                android:inputType="numberDecimal" />
    
    
    
            <EditText
                android:id="@+id/transfer_money_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/transfer_money_amt"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/transfer_money_amt"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/transfer_notes"
                android:inputType="textMultiLine" >
    
                <requestFocus />
            </EditText>
    
    
    
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/transfer_money_notes"
                android:layout_alignRight="@+id/transfer_money_notes"
                android:layout_below="@+id/transfer_money_notes"
                android:layout_marginTop="10dp" >
    
                <Button
                    android:id="@+id/transfer_money_button_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transfer_button_email" />
    
    
                <Button
                    android:id="@+id/transfer_money_button_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transfer_button_address" />
    
                <Button
                    android:id="@+id/transfer_money_button_nfc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transfer_button_nfc" />
    
            </LinearLayout>
            
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>